--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,28 @@
+# -------------------- PROJECT INFO --------------------
+#   Title   :                       Project Template
+#   Version :                       Kambiz Asadzadeh
+# ------------------------------------------------------
+
 cmake_minimum_required(VERSION 3.18)
 cmake_policy(SET CMP0048 NEW)
 
 # Add include path for cmake modules
 # ------ PROJECT EXTRA CMAKE ------
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/")
 
-if(USE_QT)
-    set(CMAKE_AUTOUIC ON)
-    set(CMAKE_AUTOMOC ON)
-    set(CMAKE_AUTORCC ON)
-endif()
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+
+include(ExternalProject)
+include(FetchContent)
 
 # ------ PROJECT INFO ------
 # Options
-set(PROJECT_NAME "Code-Meli" CACHE STRING "Project Name")
-set(PROJECT_TARGET ${PROJECT_NAME} CACHE STRING "Target Name")
+set(PROJECT_NAME "CodeMelli-Checker" CACHE STRING "Project Name.") #You can change "ProjectTemplate" with your project name.
+set(PROJECT_TARGET ${PROJECT_NAME} CACHE STRING "A tool for validation Iranian national code.")
 
 set(PROJECT_VERSION_MAJOR 0)
-set(PROJECT_VERSION_MINOR 5)
-set(PROJECT_VERSION_PATCH 432)
+set(PROJECT_VERSION_MINOR 9)
+set(PROJECT_VERSION_PATCH 966)
+set(PROJECT_VERSION_TWEAK 0)
 
 # ---- Project settings ----
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -27,12 +30,14 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 if(NOT DEFINED CMAKE_CXX_STANDARD)
-    set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_STANDARD 17)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
     set(CMAKE_CXX_EXTENSIONS ON)
 endif()
 
-set(PROJECT_CREATOR "Kambiz Asadzadeh")
+set(PROJECT_CREATOR "Kambiz Asadzadeh" CACHE STRING "Creator of your project.") #Your project creator.
+
+set(PROJECT_LICENSE_TYPE "MIT" CACHE STRING "Project License Type.") #Your project license type.
 
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
   execute_process(
@@ -41,22 +46,53 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
     OUTPUT_VARIABLE PROJECT_VERSION_TAG
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+
 endif()
 if(NOT PROJECT_VERSION_TAG)
   set(PROJECT_VERSION_TAG 00000000)
 endif()
 set(PROJECT_VERSION_TAG_HEX 0x${PROJECT_VERSION_TAG})
-set(PROJECT_VERSION_TYPE "pre-alpha")
+set(PROJECT_VERSION_TYPE "alpha" CACHE STRING "Version type.")
+set(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
+set(PROJECT_VERSION_STRING ${PROJECT_VERSION})
 
-set(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH} CACHE STRING "Version of ${PROJECT_NAME}")
+# Supported languages include C, CXX (i.e. C++), CUDA, OBJC (i.e. Objective-C), OBJCXX, Fortran, HIP, ISPC, and ASM. By default C and CXX are enabled if no language options are given.
+# Specify language NONE, or use the LANGUAGES keyword and list no languages, to skip enabling any languages.
+set(PROJECT_LANGUAGES CXX)
+
+#Use these keys [stl, qt, qtwidget, qtquick]
+set(PROJECT_MAIN_TYPE "qtquick" CACHE STRING "Library System.")
+
+#Use these keys [macOS, Windows, Linux, iOS, Android]
+set(PLATFORM_OS "macOS" CACHE STRING "OS Type.")
+
+#You can replace your project description with this string.
+set(PROJECT_DESCRIPTION "A template for modern C++ projects with useful features for developing cross-platform projects." CACHE STRING "Project Description")
+
+#Your project website address.
+set(PROJECT_HOMEPAGE_URL "https://kambizasadzadeh.com" CACHE STRING "Project URL.")
+
+
+#Project pre-configuration system.
+configure_file(
+  ${PROJECT_SOURCE_DIR}config.hpp.in
+  ${PROJECT_SOURCE_DIR}config.hpp
+)
 
 project(
     ${PROJECT_NAME}
-    LANGUAGES CXX
-    DESCRIPTION "Description of your project."
-    HOMEPAGE_URL "https://kambizasadzadeh.com"
+    LANGUAGES ${PROJECT_LANGUAGES}
+    DESCRIPTION ${PROJECT_DESCRIPTION}
+    HOMEPAGE_URL ${PROJECT_HOMEPAGE_URL}
     VERSION ${PROJECT_VERSION}
     )
+
+# ------ PACKAGES CONFIG ------
+include(project-setting)
+if(project-setting)
+  return()
+endif()
+set(project-setting ON)
 
 # ------ CROSS-COMPILE CONFIG ------
 include(cross-compile)
@@ -87,21 +123,28 @@ endif()
 set(packages ON)
 
 
-SET (PROJECT_LICENSE "MIT")
+if(USE_QT AND NOT PROJECT_MAIN_TYPE STREQUAL "stl")
+    set(CMAKE_AUTOUIC ON)
+    set(CMAKE_AUTOMOC ON)
+    set(CMAKE_AUTORCC ON)
+endif()
 
 set(SUFFIX_EXTRA *.in)
 set(SUFFIX_HPPHEADER *.hpp)
 set(SUFFIX_SOURCE *.cpp)
 set(SUFFIX_CONFIG *.json)
 
-if(HAS_USER_INTERFACE)
-    set(SUFFIX_QML *.qml)
-    set(SUFFIX_QRC *.qrc)
+if(PROJECT_MAIN_TYPE STREQUAL "qtwidget")
+     set(SUFFIX_WIDGET *.ui)
+elseif(PROJECT_MAIN_TYPE STREQUAL "qtquick")
+     set(SUFFIX_QML *.qml)
+     set(SUFFIX_QRC *.qrc)
 endif()
 
 file(GLOB PRECOMPILED precompiled/pch.hpp)
 file(GLOB HEADERS source/${SUFFIX_HPPHEADER})
 file(GLOB SOURCES source/${SUFFIX_SOURCE})
+
 file(GLOB EXAMPLES
      source/examples/${SUFFIX_HPPHEADER}
      source/examples/${SUFFIX_SOURCE}
@@ -111,15 +154,43 @@ file(GLOB UTILS
      utilities/${SUFFIX_SOURCE}
 )
 
-if(HAS_USER_INTERFACE)
-    file(GLOB UI_SOURCE ui/${SUFFIX_QRC})
+if(${PROJECT_MAIN_TYPE} STREQUAL "stl")
+    set(HAS_USER_INTERFACE false)
+    file(GLOB MAIN_ENTRY_POINT
+         source/entrypoint/stl/${SUFFIX_HPPHEADER}
+         source/entrypoint/stl/${SUFFIX_SOURCE}
+    )
+elseif(${PROJECT_MAIN_TYPE} STREQUAL "qt")
+    file(GLOB MAIN_ENTRY_POINT
+         source/entrypoint/qt/nogui/${SUFFIX_HPPHEADER}
+         source/entrypoint/qt/nogui/${SUFFIX_SOURCE}
+    )
+elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtwidget")
+    file(GLOB MAIN_ENTRY_POINT
+        source/entrypoint/qt/qtwidget/${SUFFIX_HPPHEADER}
+        source/entrypoint/qt/qtwidget/${SUFFIX_SOURCE}
+        ui/widgets/${SUFFIX_HPPHEADER}
+        ui/widgets/${SUFFIX_SOURCE}
+    )
+elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtquick")
+    file(GLOB MAIN_ENTRY_POINT
+         source/entrypoint/qt/qtquick/${SUFFIX_HPPHEADER}
+         source/entrypoint/qt/qtquick/${SUFFIX_SOURCE}
+    )
+endif()
+
+
+if(${PROJECT_MAIN_TYPE} STREQUAL "qtwidget")
+   file(GLOB UI_SOURCE ui/widgets/${SUFFIX_WIDGET})
+else()
+   file(GLOB UI_SOURCE ui/qtquick/${SUFFIX_QRC})
 endif()
 
 file(GLOB CONFIGFILE config/${SUFFIX_CONFIG})
 
-if(HAS_USER_INTERFACE)
 file(GLOB SOURCESFILE
     #---C++---
+    ${MAIN_ENTRY_POINT}
     ${HEADERS}
     ${SOURCES}
     ${UI_SOURCE}
@@ -131,31 +202,15 @@ file(GLOB SOURCESFILE
 
 source_group("PrecompiledHeaders"  FILES ${PRECOMPILED})
 source_group("Utilities"  FILES ${UTILS})
+source_group("Entry Point (Main)"   FILES ${MAIN_ENTRY_POINT})
 source_group("Base"   FILES ${HEADERS} ${SOURCES})
 source_group("UI"     FILES ${UI_SOURCE})
 source_group("Config" FILES ${CONFIGFILE})
 source_group("Examples"  FILES ${EXAMPLES})
 
-else()
-    file(GLOB SOURCESFILE
-    #---C++---
-    ${HEADERS}
-    ${SOURCES}
-    ${UTILS}
-    ${CONFIGFILE}
-    ${PRECOMPILED}
-    ${EXAMPLES}
-    )
-
-source_group("PrecompiledHeaders"  FILES ${PRECOMPILED})
-source_group("Utilities"  FILES ${UTILS})
-source_group("Base"   FILES ${HEADERS} ${SOURCES})
-source_group("Config" FILES ${CONFIGFILE})
-source_group("Examples"  FILES ${EXAMPLES})
-
-endif()
 
 # ------ PROJECT DIRECTORIES ------
+
 set(dir ${CMAKE_CURRENT_SOURCE_DIR}/build/)
 set(EXECUTABLE_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
 set(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
@@ -168,24 +223,40 @@ SET(LIBRARY_OUTPUT_PATH ${dir}lib)
 SET(CMAKE_CACHEFILE_DIR ${dir})
 
 message("CMAKE_BUILD_FILES_DIRECTORY: " ${CMAKE_BUILD_FILES_DIRECTORY})
+
 # ------ OUTPUTS CONFIG ------
 
+if(PLATFORM_OS STREQUAL "macOS")
+    if(OS_ARCHITECTURES STREQUAL "")
+      set(OS_ARCHITECTURES ${CMAKE_OSX_ARCHITECTURES})
+      else()
+      set(OS_ARCHITECTURES "x86_64")
+    endif()
+else()
+    if(PROCESSOR_ARCHITECTURE STREQUAL "")
+      set(OS_ARCHITECTURES ${PROCESSOR_ARCHITECTURE})
+      else()
+      set(OS_ARCHITECTURES "x86_64")
+    endif()
+    set(OS_ARCHITECTURES ${PROCESSOR_ARCHITECTURE})
+endif()
 
 message(STATUS "${BoldRed}------ ${PROJECT_TARGET} Tools Configuration ------${ColourReset}")
 message(STATUS "${Bold}Language Standard${ColourReset}	    : C++[${CMAKE_CXX_STANDARD}]")
 message(STATUS "${Bold}Compiler${ColourReset}		    : ${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "${Bold}Compiler Version${ColourReset}	    : ${CMAKE_CXX_COMPILER_VERSION}")
 message(STATUS "${Bold}OS Target${ColourReset}		    : ${CMAKE_HOST_SYSTEM}")
-message(STATUS "${Bold}OS Version${ColourReset}		    : ${CMAKE_OSX_DEPLOYMENT_TARGET}")
-message(STATUS "${Bold}System Architecture${ColourReset}	    : ${CMAKE_SYSTEM_PROCESSOR}")
-message(STATUS "${Bold}Project License${ColourReset}	    : ${PROJECT_LICENSE}")
+message(STATUS "${Bold}OS Version${ColourReset}		    : ${CMAKE_HOST_SYSTEM_VERSION}")
+message(STATUS "${Bold}System Architecture${ColourReset}      : ${OS_ARCHITECTURES}")
+message(STATUS "${Bold}Project License${ColourReset}	    : ${PROJECT_LICENSE_TYPE}")
 message(STATUS "${BoldBlue}------ ${PROJECT_TARGET} Framework Info ------${ColourReset}")
 message(STATUS "${Bold}Name${ColourReset}			    : ${CMAKE_PROJECT_NAME}")
 message(STATUS "${Bold}Description${ColourReset}		    : ${CMAKE_PROJECT_DESCRIPTION}")
-message(STATUS "${Bold}Version${ColourReset}		    : ${CMAKE_PROJECT_VERSION_VERSION}")
+message(STATUS "${Bold}Version${ColourReset}		    : ${PROJECT_VERSION}")
+message(STATUS "${Bold}Creator${ColourReset}		    : ${PROJECT_CREATOR}")
 message(STATUS "${BoldBlue}------ ${PROJECT_TARGET} Project Configuration ------${ColourReset}")
-message(STATUS "${Bold}DEVELOPER${ColourReset}		    : ${PROJECT_DEVELOPER}")
-message(STATUS "${Bold}PROJECT_PROJECT${ColourReset}	    : ${PROJECT_PROJECT}")
+message(STATUS "${Bold}DEVELOPER${ColourReset}		    : ${PROJECT_CREATOR}")
+message(STATUS "${Bold}PROJECT_PROJECT${ColourReset}	    : ${PROJECT_NAME}")
 message(STATUS "${Bold}PROJECT_TARGET${ColourReset}	    : ${PROJECT_TARGET}")
 message(STATUS "${Bold}PROJECT_VERSION${ColourReset}	    : ${PROJECT_VERSION}")
 message(STATUS "${Bold}PROJECT_VERSION_TYPE${ColourReset}	    : ${Underscore}${PROJECT_VERSION_TYPE}${ColourReset}")
@@ -197,71 +268,108 @@ message(STATUS "${Bold}LIBRARY_OUTPUT_PATH${ColourReset}		: ${LIBRARY_OUTPUT_PAT
 message(STATUS "${Bold}CMAKE_CURRENT_SOURCE_DIR${ColourReset}	: ${CMAKE_CURRENT_SOURCE_DIR}")
 message(STATUS "${BoldBlue}------ ${PROJECT_TARGET} End Configuration ------${ColourReset}")
 
-if(USE_QT)
-#Add an executable to the project using the specified source files.
-add_executable(${PROJECT_NAME} ${SOURCESFILE} ${UI_SOURCE})
+if(ANDROID)
+    set(DANDROID_NATIVE_API_LEVEL 23)
+    if(NOT PROJECT_MAIN_TYPE STREQUAL "qtquick")
+        #message(${BoldRed} "Please set {qtquick} key to PROJECT_MAIN_TYPE." ${ColourReset})
+        set(PROJECT_MAIN_TYPE "qtquick")
+    endif()
+    add_library(${PROJECT_NAME} SHARED ${SOURCESFILE} ${UI_SOURCE})
 else()
-#Add an executable to the project using the specified source files.
-add_executable(${PROJECT_NAME} ${SOURCESFILE})
+  if(USE_QT)
+    #Add an executable to the project using the specified source files.
+    add_executable(${PROJECT_NAME} ${SOURCESFILE} ${UI_SOURCE})
+  else()
+    #Add an executable to the project using the specified source files.
+    add_executable(${PROJECT_NAME} ${SOURCESFILE})
+  endif()
 endif()
 
-if(USE_BOOST)
-set(Boost_USE_STATIC_LIBS        ON)  # only find static libs.
-set(Boost_USE_DEBUG_LIBS        OFF) # ignore debug libs and.
-set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs.
-set(Boost_USE_MULTITHREADED      ON)  # use multithread mode.
-set(Boost_USE_STATIC_RUNTIME    OFF)  # use static mode at runtime.
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
-endif()
-if(USE_NONE_STL_JSON)
-    target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
-endif()
-if(USE_CATCH2)
-    target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2)
-endif()
-if(USE_GOOGLE_TEST)
-    target_link_libraries(${PROJECT_NAME} PRIVATE gtest)
-endif()
-if(USE_DOC_TEST)
-    target_link_libraries(${PROJECT_NAME} PRIVATE doctest)
-endif()
-if(USE_CURL)
-    target_link_libraries(${PROJECT_NAME} PRIVATE curl)
-endif()
-if(USE_FMT)
-    target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)
-endif()
-if(USE_OPENSSL)
-    target_link_libraries(${PROJECT_NAME} PRIVATE crypto ssl)
-endif()
-if(USE_ZLIB)
-    target_link_libraries(${PROJECT_NAME} PRIVATE zlib)
-endif()
-if(USE_BOOST)
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
-endif()
-
-target_link_libraries(${PROJECT_NAME}
- PRIVATE
- -lc++
-)
-
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/source PRIVATE source)
-target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source)
-
+#Support Qt6 & Qt5 Modules.
 if(USE_QT)
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)
-target_link_libraries(${PROJECT_NAME}
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core
-  Qt${QT_VERSION_MAJOR}::Quick
-)
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_import_qml_plugins(${PROJECT_NAME})
-    qt_finalize_executable(${PROJECT_NAME})
-endif()
+
+
+    if(QT_VERSION_MAJOR EQUAL 6)
+        qt_import_qml_plugins(${PROJECT_NAME})
+        qt_finalize_executable(${PROJECT_NAME})
+    endif()
+
+    if(USE_QT5_FEATURES)
+
+        if(${PROJECT_MAIN_TYPE} STREQUAL "qt")
+            list(APPEND QT_MODULES Core Core5Compat)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Core5Compat
+                )
+        elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtwidget")
+            list(APPEND QT_MODULES Core Widgets Core5Compat)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Widgets
+                Qt${QT_VERSION_MAJOR}::Core5Compat
+                )
+        elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtquick")
+            list(APPEND QT_MODULES Core Quick Core5Compat)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Quick
+                Qt${QT_VERSION_MAJOR}::Core5Compat
+                )
+        else()
+            list(APPEND QT_MODULES Core Core5Compat)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Core5Compat
+                )
+        endif()
+    else()
+        if(${PROJECT_MAIN_TYPE} STREQUAL "qt")
+            list(APPEND QT_MODULES Core)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                )
+        elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtwidget")
+            list(APPEND QT_MODULES Core Widgets)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Widgets
+                )
+        elseif(${PROJECT_MAIN_TYPE} STREQUAL "qtquick")
+            list(APPEND QT_MODULES Core Quick)
+            list(APPEND QT_MODULES_LINK
+                Qt${QT_VERSION_MAJOR}::Core
+                Qt${QT_VERSION_MAJOR}::Quick
+                )
+        endif()
+    endif()
+    find_package(QT NAMES Qt6 Qt5 COMPONENTS ${QT_MODULES} REQUIRED)
+    find_package(Qt${QT_VERSION_MAJOR} COMPONENTS ${QT_MODULES} REQUIRED)
+
+    if(USE_QT_QUICK_COMPILER)
+    find_package(QtQuickCompiler)
+    qt_add_resources(UI_SOURCE ui/qtquick/qml.qrc)
+    endif()
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${QT_MODULES_LINK})
 endif()
 
+#Extra Modules
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LIB_MODULES})
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/source PRIVATE source
+    ${LIB_TARGET_INCLUDE_DIRECTORIES}
+    )
+
+target_link_directories(${PROJECT_NAME}
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/source
+    ${LIB_TARGET_LINK_DIRECTORIES}
+    )
+
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${LIB_TARGET_COMPILER_DEFINATION})
+
+#set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS ${LIB_TARGET_PROPERTIES})
 #This command generates installation rules for a project.
 #Install rules specified by calls to the install() command within a source directory. are executed in order during installation.
 install(TARGETS ${PROJECT_NAME} DESTINATION build/bin)
