--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ endif()
 if(${PROJECT_MAIN_TYPE} STREQUAL "qtwidget")
    file(GLOB UI_SOURCE ui/widgets/${SUFFIX_WIDGET})
 else()
-   file(GLOB UI_SOURCE ui/qtquick/${SUFFIX_QRC})
+   file(GLOB UI_SOURCE ${SUFFIX_QRC})
 endif()
 
 file(GLOB CONFIGFILE config/${SUFFIX_CONFIG})
@@ -348,7 +348,7 @@ if(USE_QT)
 
     if(USE_QT_QUICK_COMPILER)
     find_package(QtQuickCompiler)
-    qt_add_resources(UI_SOURCE ui/qtquick/qml.qrc)
+    qt_add_resources(UI_SOURCE qml.qrc)
     endif()
     target_link_libraries(${PROJECT_NAME} PRIVATE ${QT_MODULES_LINK})
 endif()
